[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player/bullet.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Utility/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Player/attacks.png" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/bullet hit.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 11 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.5, 11 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11.5, 12 )

[node name="autoBullet" type="RigidBody2D"]
pause_mode = 2
physics_interpolation_mode = 1
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 19.5, 1.90735e-06 )
scale = Vector2( 0.85, 0.9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 19.5, 0 )
shape = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 19.5, 0 )
shape = SubResource( 4 )

[node name="bulletHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "SFX"

[node name="bulletPenetration" type="Area2D" parent="."]
position = Vector2( 19.5, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="bulletPenetration"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.662745, 0, 1, 1 )
position = Vector2( 19.5, 0 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_bigBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="bulletHitSound" to="." method="_on_bulletHitSound_finished"]
[connection signal="area_entered" from="bulletPenetration" to="." method="_on_bulletPenetration_area_entered"]

[editable path="HitBox"]
