[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player/bullet.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Utility/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Player/attacks.png" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 11 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 11 )

[node name="bullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 6, 0 )
scale = Vector2( 0.55, 0.55 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 0 )
shape = SubResource( 3 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 6, 0 )
shape = SubResource( 4 )

[node name="bulletHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "SFX"

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.717647, 0.262745, 1, 1 )
position = Vector2( 6, -4.54747e-13 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="bulletHitSound" to="." method="_on_bulletHitSound_finished"]

[editable path="HitBox"]
